Изменён id на UUID и исправлены баги